fixed contact sizing and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -101,14 +101,6 @@ font-size: clamp(1rem, 2vw, 5rem);
 
 }
 
-.contactBody {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
-  padding: 40px;
-  width: 75%;
-  color: white;
-
-}
-
 .mainContainer {
   padding-bottom:500px;
 }
@@ -245,7 +237,15 @@ h5 {
 .subHeader {
 margin-bottom: 4vw;
 color: rgb(0, 191, 255);
-font-size: 3vw;
+font-size: clamp(15px, 3vw, 36px);
+}
+
+.contactBody {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4 ), rgba(0, 0, 0, 0.3));
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 85%;
+  color: white;
 }
 
 .contactRow {
@@ -255,7 +255,8 @@ font-size: 3vw;
 .contactEmail, .contactPhone, .contactGithub, .contactLinkedin {
   display: inline-block;
   color: white;
-  font-size: 2vw;
+  font-size: clamp(15px, 3vw, 36px);
+
   margin: auto;
 }
 
@@ -311,9 +312,14 @@ height: 325px;
   }
 
   @media only screen and (max-width: 991px) {
-  
     .contactRow {
-      margin-left: 10%
+      margin-left: 5%
+    }
+  }
+
+  @media only screen and (max-width: 305px) {
+    .contactRow {
+      margin-left: 2%
     }
   }
 
